<resources>
    <string name="app_name">Pokédex</string>
    <string name="title_home">Início</string>
    <string name="title_pokedex">Pokédex</string>
    <string name="title_about">Sobre</string>
    <string name="loading_pokemons">Carregando Pokémons...</string>
    <string name="pokebola">Pokébola</string>
    <string name="ilustracao_pokemon">Ilustração pokémon</string>
    <string name="djalma_henrique">Djalma Henrique</string>
    <string name="lucas_dos_santos">Lucas dos Santos</string>
    <string name="marcos_fellipe">Marcos Fellipe</string>
    <string name="acesse_meu_instagram">Acesse meu Instagram</string>
    <string name="acesse_meu_linkedin">Acesse meu LinkedIn</string>
    <string name="acesse_meu_portfolio">Acesse meu Portfólio</string>
    <string name="saiba_mais_sobre_mim">Saiba mais sobre mim</string>
</resources>